--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "src/model/CMAQ"]
 	path = src/model/CMAQ
-	url = https://github.com/USEPA/CMAQ.git
-	branch = CMAQv5.3.3.2_7May2022
+	url = https://github.com/USEPA/CMAQ
+	branch = 5.2.1
